--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "learning React and making first application",
   "scripts": {
     "test": "jest",
-    "start": "npx parcel index.html"
+    "start": "parcel index.html",
+    "build": "parcel build index.html"
   },
   "author": "Gautam Shandilya",
   "license": "ISC",
@@ -17,6 +18,7 @@
     "last two versions"
   ],
   "devDependencies": {
+    "@parcel/transformer-sass": "^2.10.2",
     "process": "^0.11.10"
   }
 }
