--- a/package.json
+++ b/package.json
@@ -10,16 +10,21 @@
   "author": "Gautam Shandilya",
   "license": "ISC",
   "dependencies": {
+    "@reduxjs/toolkit": "^2.2.2",
     "parcel": "^2.10.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^9.1.0",
     "react-router-dom": "^6.21.3"
   },
   "browserslist": [
-    "last two versions"
+    "last 1 chrome version",
+    "last 1 firefox version",
+    "last 1 safari version"
   ],
   "devDependencies": {
     "@parcel/transformer-sass": "^2.10.2",
-    "process": "^0.11.10"
+    "process": "^0.11.10",
+    "tailwindcss": "^3.4.1"
   }
 }
